--- a/development.build.properties.example
+++ b/development.build.properties.example
@@ -3,7 +3,7 @@
 ##
 # Here values is the same as ant basedir because basedir is not set in this context
 ##
-work.dir=/C:/Users/Test/Documents/LAVA/XRechnung/validator-configuration-xrechnung
+work.dir=/C:/Users/User/Documents/LAVA/XRechnung/validator-configuration-xrechnung
 
 ##
 # The XRechnung Version this configuration implements
@@ -26,7 +26,7 @@ validator.download.url.prefix=file://${work.dir}/../validator/
 # Set this property in order to activate targets for local development
 # Be aware the presence of this property determines some of the behavior independent of the value
 ##
-# develop.local.xr.testsuite=true
+develop.local.xr.testsuite=true
 ###
 # Get latest XRechnung Testsusite distribution from your local git project
 # Example is relative to this project directory in local file system
@@ -34,6 +34,12 @@ validator.download.url.prefix=file://${work.dir}/../validator/
 xr.testsuite.download.url.prefix=file://${work.dir}/../xrechnung-testsuite/dist
 
 xr.testsuite.version=2020-07-31-SNAPSHOT
+
+##
+# Set this property in order to activate targets for local development
+# Be aware the presence of this property determines some of the behavior independent of the value
+##
+develop.local.xr.schematron=true
 
 ###
 # Get latest schematron distribution from your local git project
