--- a/build.xml
+++ b/build.xml
@@ -29,12 +29,12 @@
     value="validator-configuration-xrechnung_${xrechnung.version}_${validator.configuration.version.full}.zip" />
   <!-- 3rd party resources -->
   <!-- KoSIT XML Validator -->
-  <property name="validator.version" value="1.3.0" />
+  <property name="validator.version" value="1.4.0" />
   <property name="validator.download.url.prefix"
     value="https://github.com/itplr-kosit/validator/releases/download/" />
-  <!-- Pick by default the java 8 standalone distribution -->
+  <!-- Pick by default the standalone distribution -->
   <property name="validator.jar"
-    value="validationtool-${validator.version}-java8-standalone.jar" />
+    value="validationtool-${validator.version}-standalone.jar" />
 
   <property name="saxon.jar" value="saxon9he.jar" />
   <property name="cii.version" value="D16B" />
