--- a/build.xml
+++ b/build.xml
@@ -691,7 +691,7 @@
     <echo message="Testing all" />
   </target>
 
-  <target name="dist-only" depends="compile"
+  <target name="dist-only" 
     description="Generate the distribution without testing">
     <copy todir="${build.dir}">
       <fileset dir="${basedir}">
@@ -701,10 +701,10 @@
     </copy>
     <zip
       destfile="${dist.dir}/${dist.name}"
-      basedir="${build.dir}" excludes="download/**,test,schematron" />
+      basedir="${build.dir}" excludes="download/**,test/**,schematron/**,reports/**" />
   </target>
 
-  <target name="dist" depends="test, dist-only"
+  <target name="dist" depends="compile,test, dist-only"
     description="Generate the distribution"> </target>
   <target name="clean" description="clean up">
     <!-- Delete the ${build} and ${dist} directory trees -->
