--- a/build.xml
+++ b/build.xml
@@ -30,10 +30,13 @@
     value="validator-configuration-xrechnung_${xrechnung.version}_${validator.configuration.version.full}.zip" />
   <!-- 3rd party resources -->
   <!-- KoSIT XML Validator -->
-  <property name="validator.version" value="1.4.1" />
+  <property name="validator.version" value="1.4.2" />
   <property name="validator.download.url.prefix"
-    value="https://github.com/itplr-kosit/validator/releases/download/" />
-  <!-- Pick by default the standalone distribution -->
+    value="https://github.com/itplr-kosit/validator/releases/download" />
+    
+  <property name="validator.zip" value="validator-${validator.version}-distribution.zip" />
+  
+  <!-- Pick by default the standalone distribution -->  
   <property name="validator.jar" value="validationtool-${validator.version}-standalone.jar" />
 
   <!-- Part of the download path -->
@@ -50,7 +53,7 @@
     value="http://www.unece.org/fileadmin/DAM/cefact/xml_schemas/${cii.schema.zip}" />
   <property name="ubl.version" value="2.1" />
   <property name="ubl.download.url.prefix"
-    value="http://docs.oasis-open.org/ubl/os-UBL-${ubl.version}/" />
+    value="http://docs.oasis-open.org/ubl/os-UBL-${ubl.version}" />
   <property name="ubl.schema.zip" value="UBL-${ubl.version}.zip" />
 
   <property name="ubl.download.url"
@@ -208,7 +211,6 @@
     <delete file="${lib.dir}/${saxon.jar}" />
   </target>
 
-  <property name="validator.zip" value="validationtool-${validator.version}.zip" />
 
   <target name="retrieve-validator-from-local-build" depends="init" if="develop.local.validator">
     <get src="${validator.download.url.prefix}/target/${validator.zip}" dest="${download.dir}/"
@@ -240,7 +242,7 @@
 
     <echo message="Unpacking Validator reosurces" />
 
-    <unzip src="${download.dir}/validationtool-${validator.version}.zip" dest="${lib.dir}">
+    <unzip src="${download.dir}/${validator.zip}" dest="${lib.dir}">
       <patternset>
         <include name="**/${validator.jar}" />
       </patternset>
